@startuml 21-clases-aplicacion-saga-secundaria3
title Aplicación — saga secundaria 3 (business.sagas.aplicacion.servicio.sagasecundaria3): ServicioSagaSecundaria3 y sus puertos
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

interface "ProcesadorOrden (ver 17)" as Base

class ServicioSagaSecundaria3 <<@Service>> {
  -repo : RepositorioOrden
  -puerto : PuertoSagaSecundaria3
  -self : ServicioSagaSecundaria3  «proxy auto-inyectado, @Lazy\n(ver ConfiguracionSagas); establecerSelf(self)»
  +tipo() : TipoOrden  «SagaSecundaria3.TIPO»
  +ejecutarPaso(orden) : SenalPaso
  +aplicar(orden, saga, resultado) : SenalPaso  «@Transactional»
}
note right of ServicioSagaSecundaria3
  Un único paso: recibe el agregado YA CARGADO por
  ServicioContinuarOrden (ver 17); castea orden.proceso() a
  SagaSecundaria3, comandoActual() + puerto.ejecutar (REST fuera de
  tx), luego self.aplicar(...) -- vía proxy, para que
  @Transactional no se ignore por auto-invocación -- guarda esa
  misma instancia de OrdenRoot sin recargar: SagaSecundaria3 es un
  VO inmutable (ver 16), así que aplicar hoistea un único var
  ahora = Instant.now() y hace
  orden.reemplazarProceso(saga.aplicarYAvanzar(resultado), ahora) +
  orden.finalizar(ahora) directo, sin comprobar terminada()
  (el único paso siempre termina la saga); si otro actor escribió
  entre medias, guardar falla por version. Siempre devuelve
  Finalizada: nunca HayMasTrabajo ni Aparcar. Sin lease propio: a
  diferencia de principal/secundaria1, este servicio no lo necesita
  (nunca reintenta dentro del mismo paso).
end note

package "puerto.salida" {
  interface "RepositorioOrden\n(business.ordermanager — ver 17)" as RepositorioOrden
  interface PuertoSagaSecundaria3 {
    +ejecutar(cmd) : Ejecutada(refEjecucion)  «REST síncrono»
  }
}

Base <|.. ServicioSagaSecundaria3
ServicioSagaSecundaria3 --> RepositorioOrden
ServicioSagaSecundaria3 --> PuertoSagaSecundaria3 : REST síncrono (fuera de la tx)
@enduml
